Fixes topbar on smaller devices

--- a/src/styles/_docs.scss
+++ b/src/styles/_docs.scss
@@ -244,7 +244,7 @@
 /* Medium screens
    ========================================================================== */
 
-@media (min-width: $screen-md-min) {
+@media (min-width: $screen-sm-min) {
 	.topbar.topbar-inverse.topbar-docs {
 		position: fixed;
 	}
